# hireflow-recruitment-env

./: Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py  env.py  mock_data.py
