[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hireflow-recruitment-env"
version = "1.0.0"
description = "HireFlow Recruitment Simulator for OpenEnv"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "openai>=1.30.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.1",
    "uvicorn[standard]>=0.30.1",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"